# irobot-create3-demos

./: README.md
irobot/: CMakeLists.txt  package.xml
irobot_demos/: package.xml  setup.cfg  setup.py
irobot_demos/irobot_demos/: antivuelco.py  control_p.py  cuadrado.py  espiral.py  evitar_obstaculos.py  explorador.py  radar.py  seguidor_paredes.py  telemetria_live.py
irobot_demos/rviz/: rrbot.rviz
irobot_navigation/: CMakeLists.txt  README.md  package.xml
irobot_navigation/config/: localization.yaml  nav2.yaml  slam.yaml
irobot_navigation/irobot_navigation/: irobot_navigator.md  robot_status_overlay.py
irobot_navigation/launch/: autonomous_nav.launch.py  localization.launch.py  monitor.launch.py  nav2.launch.py  slam.launch.py
irobot_navigation/maps/: mapa.pgm  mapa.yaml
irobot_navigation/rviz/: monitor.rviz  navigation.rviz
irobot_navigation/scripts/: battery_monitor.py  start_waypoint_mission.sh
