<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irobot_navigation</name>
  <version>1.0.5</version>
  <description>iRobot Create 3 Navigation — SLAM, localización y navegación autónoma con Nav2</description>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_simple_commander</depend>
  <depend>irobot_create_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz_2d_overlay_msgs</exec_depend>
  <exec_depend>irobot_create_description</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
